// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Billing Summary shoudl render recipient validation section if option is enabled 1`] = `
<div>
  <PendingPlanBanner
    account={
      Object {
        "billing": Object {},
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
  />
  <FreePlanWarningBanner
    account={
      Object {
        "billing": Object {},
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
    accountAgeInDays={5}
  />
  <Panel
    accent={true}
    title="Plan Overview"
  >
    <Panel.Section
      actions={
        Array [
          Object {
            "Component": [Function],
            "color": "orange",
            "content": "Upgrade Now",
            "to": "/account/billing/plan",
          },
        ]
      }
    >
      <LabelledValue
        label="Your Plan"
      >
        <PlanSummary
          plan={
            Object {
              "plan_volume": 15000,
            }
          }
        />
      </LabelledValue>
    </Panel.Section>
    <DedicatedIpSummarySection
      count={0}
      onClick={[Function]}
      plan={
        Object {
          "isFree": true,
        }
      }
    />
    <Panel.Section>
      <LabelledValue
        label="Recipient Validation"
      >
        <h6>
          123,123
           emails validated for 
          $599.37
          <small>
             as of 
            2019-6-9
          </small>
        </h6>
        <UnstyledLink
          onClick={[Function]}
        >
          How was this calculated?
        </UnstyledLink>
      </LabelledValue>
    </Panel.Section>
  </Panel>
  <Panel
    title="Billing"
  >
    <Panel.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Payment Information",
            "onClick": [Function],
          },
        ]
      }
    >
      <CardSummary
        billing={Object {}}
        label="Credit Card"
      />
    </Panel.Section>
    <Panel.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Billing Contact",
            "onClick": [Function],
          },
        ]
      }
    >
      <LabelledValue
        label="Billing Contact"
      >
        <h6>
           
        </h6>
        <p />
      </LabelledValue>
    </Panel.Section>
  </Panel>
  <PremiumBanner />
  <EnterpriseBanner />
  <Modal
    onClose={[Function]}
    open={false}
    showCloseButton={false}
  />
</div>
`;

exports[`Component: Billing Summary should render correctly for a paid plan 1`] = `
<div>
  <PendingPlanBanner
    account={
      Object {
        "billing": Object {},
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
  />
  <FreePlanWarningBanner
    account={
      Object {
        "billing": Object {},
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
    accountAgeInDays={5}
  />
  <Panel
    accent={true}
    title="Plan Overview"
  >
    <Panel.Section
      actions={
        Array [
          Object {
            "Component": [Function],
            "color": "orange",
            "content": "Change Plan",
            "to": "/account/billing/plan",
          },
        ]
      }
    >
      <LabelledValue
        label="Your Plan"
      >
        <PlanSummary
          plan={
            Object {
              "plan_volume": 15000,
            }
          }
        />
      </LabelledValue>
    </Panel.Section>
    <DedicatedIpSummarySection
      count={0}
      onClick={[Function]}
      plan={
        Object {
          "isFree": false,
        }
      }
    />
  </Panel>
  <Panel
    title="Billing"
  >
    <Panel.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Payment Information",
            "onClick": [Function],
          },
        ]
      }
    >
      <CardSummary
        billing={Object {}}
        label="Credit Card"
      />
    </Panel.Section>
    <Panel.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Billing Contact",
            "onClick": [Function],
          },
        ]
      }
    >
      <LabelledValue
        label="Billing Contact"
      >
        <h6>
           
        </h6>
        <p />
      </LabelledValue>
    </Panel.Section>
  </Panel>
  <PremiumBanner />
  <EnterpriseBanner />
  <Modal
    onClose={[Function]}
    open={false}
    showCloseButton={false}
  />
</div>
`;

exports[`Component: Billing Summary should render correctly for a standard free plan 1`] = `
<div>
  <PendingPlanBanner
    account={
      Object {
        "billing": Object {},
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
  />
  <FreePlanWarningBanner
    account={
      Object {
        "billing": Object {},
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
    accountAgeInDays={5}
  />
  <Panel
    accent={true}
    title="Plan Overview"
  >
    <Panel.Section
      actions={
        Array [
          Object {
            "Component": [Function],
            "color": "orange",
            "content": "Upgrade Now",
            "to": "/account/billing/plan",
          },
        ]
      }
    >
      <LabelledValue
        label="Your Plan"
      >
        <PlanSummary
          plan={
            Object {
              "plan_volume": 15000,
            }
          }
        />
      </LabelledValue>
    </Panel.Section>
  </Panel>
  <PremiumBanner />
  <EnterpriseBanner />
  <Modal
    onClose={[Function]}
    open={false}
    showCloseButton={false}
  />
</div>
`;

exports[`Component: Billing Summary should render correctly if you can't buy IPs 1`] = `
<div>
  <PendingPlanBanner
    account={
      Object {
        "billing": Object {},
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
  />
  <FreePlanWarningBanner
    account={
      Object {
        "billing": Object {},
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
    accountAgeInDays={5}
  />
  <Panel
    accent={true}
    title="Plan Overview"
  >
    <Panel.Section
      actions={
        Array [
          Object {
            "Component": [Function],
            "color": "orange",
            "content": "Upgrade Now",
            "to": "/account/billing/plan",
          },
        ]
      }
    >
      <LabelledValue
        label="Your Plan"
      >
        <PlanSummary
          plan={
            Object {
              "plan_volume": 15000,
            }
          }
        />
      </LabelledValue>
    </Panel.Section>
  </Panel>
  <Panel
    title="Billing"
  >
    <Panel.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Payment Information",
            "onClick": [Function],
          },
        ]
      }
    >
      <CardSummary
        billing={Object {}}
        label="Credit Card"
      />
    </Panel.Section>
    <Panel.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Billing Contact",
            "onClick": [Function],
          },
        ]
      }
    >
      <LabelledValue
        label="Billing Contact"
      >
        <h6>
           
        </h6>
        <p />
      </LabelledValue>
    </Panel.Section>
  </Panel>
  <PremiumBanner />
  <EnterpriseBanner />
  <Modal
    onClose={[Function]}
    open={false}
    showCloseButton={false}
  />
</div>
`;

exports[`Component: Billing Summary should render correctly if you can't change your plan 1`] = `
<div>
  <PendingPlanBanner
    account={
      Object {
        "billing": Object {},
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
  />
  <FreePlanWarningBanner
    account={
      Object {
        "billing": Object {},
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
    accountAgeInDays={5}
  />
  <Panel
    accent={true}
    title="Plan Overview"
  >
    <Panel.Section>
      <LabelledValue
        label="Your Plan"
      >
        <PlanSummary
          plan={
            Object {
              "plan_volume": 15000,
            }
          }
        />
      </LabelledValue>
    </Panel.Section>
    <DedicatedIpSummarySection
      count={0}
      onClick={[Function]}
      plan={
        Object {
          "isFree": true,
        }
      }
    />
  </Panel>
  <Panel
    title="Billing"
  >
    <Panel.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Payment Information",
            "onClick": [Function],
          },
        ]
      }
    >
      <CardSummary
        billing={Object {}}
        label="Credit Card"
      />
    </Panel.Section>
    <Panel.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Billing Contact",
            "onClick": [Function],
          },
        ]
      }
    >
      <LabelledValue
        label="Billing Contact"
      >
        <h6>
           
        </h6>
        <p />
      </LabelledValue>
    </Panel.Section>
  </Panel>
  <PremiumBanner />
  <EnterpriseBanner />
  <Modal
    onClose={[Function]}
    open={false}
    showCloseButton={false}
  />
</div>
`;

exports[`Component: Billing Summary should render correctly if you can't update your billing info 1`] = `
<div>
  <PendingPlanBanner
    account={
      Object {
        "billing": Object {},
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
  />
  <FreePlanWarningBanner
    account={
      Object {
        "billing": Object {},
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
    accountAgeInDays={5}
  />
  <Panel
    accent={true}
    title="Plan Overview"
  >
    <Panel.Section
      actions={
        Array [
          Object {
            "Component": [Function],
            "color": "orange",
            "content": "Upgrade Now",
            "to": "/account/billing/plan",
          },
        ]
      }
    >
      <LabelledValue
        label="Your Plan"
      >
        <PlanSummary
          plan={
            Object {
              "plan_volume": 15000,
            }
          }
        />
      </LabelledValue>
    </Panel.Section>
    <DedicatedIpSummarySection
      count={0}
      onClick={[Function]}
      plan={
        Object {
          "isFree": true,
        }
      }
    />
  </Panel>
  <PremiumBanner />
  <EnterpriseBanner />
  <Modal
    onClose={[Function]}
    open={false}
    showCloseButton={false}
  />
</div>
`;

exports[`Component: Billing Summary should render with IP modal open 1`] = `
<div>
  <PendingPlanBanner
    account={
      Object {
        "billing": Object {},
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
  />
  <FreePlanWarningBanner
    account={
      Object {
        "billing": Object {},
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
    accountAgeInDays={5}
  />
  <Panel
    accent={true}
    title="Plan Overview"
  >
    <Panel.Section
      actions={
        Array [
          Object {
            "Component": [Function],
            "color": "orange",
            "content": "Upgrade Now",
            "to": "/account/billing/plan",
          },
        ]
      }
    >
      <LabelledValue
        label="Your Plan"
      >
        <PlanSummary
          plan={
            Object {
              "plan_volume": 15000,
            }
          }
        />
      </LabelledValue>
    </Panel.Section>
    <DedicatedIpSummarySection
      count={0}
      onClick={[Function]}
      plan={
        Object {
          "isFree": true,
        }
      }
    />
  </Panel>
  <Panel
    title="Billing"
  >
    <Panel.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Payment Information",
            "onClick": [Function],
          },
        ]
      }
    >
      <CardSummary
        billing={Object {}}
        label="Credit Card"
      />
    </Panel.Section>
    <Panel.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Billing Contact",
            "onClick": [Function],
          },
        ]
      }
    >
      <LabelledValue
        label="Billing Contact"
      >
        <h6>
           
        </h6>
        <p />
      </LabelledValue>
    </Panel.Section>
  </Panel>
  <PremiumBanner />
  <EnterpriseBanner />
  <Modal
    onClose={[Function]}
    open={true}
    showCloseButton={false}
  >
    <AddIpsForm
      onClose={[Function]}
    />
  </Modal>
</div>
`;

exports[`Component: Billing Summary should render with the billing contact modal open 1`] = `
<div>
  <PendingPlanBanner
    account={
      Object {
        "billing": Object {},
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
  />
  <FreePlanWarningBanner
    account={
      Object {
        "billing": Object {},
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
    accountAgeInDays={5}
  />
  <Panel
    accent={true}
    title="Plan Overview"
  >
    <Panel.Section
      actions={
        Array [
          Object {
            "Component": [Function],
            "color": "orange",
            "content": "Upgrade Now",
            "to": "/account/billing/plan",
          },
        ]
      }
    >
      <LabelledValue
        label="Your Plan"
      >
        <PlanSummary
          plan={
            Object {
              "plan_volume": 15000,
            }
          }
        />
      </LabelledValue>
    </Panel.Section>
    <DedicatedIpSummarySection
      count={0}
      onClick={[Function]}
      plan={
        Object {
          "isFree": true,
        }
      }
    />
  </Panel>
  <Panel
    title="Billing"
  >
    <Panel.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Payment Information",
            "onClick": [Function],
          },
        ]
      }
    >
      <CardSummary
        billing={Object {}}
        label="Credit Card"
      />
    </Panel.Section>
    <Panel.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Billing Contact",
            "onClick": [Function],
          },
        ]
      }
    >
      <LabelledValue
        label="Billing Contact"
      >
        <h6>
           
        </h6>
        <p />
      </LabelledValue>
    </Panel.Section>
  </Panel>
  <PremiumBanner />
  <EnterpriseBanner />
  <Modal
    onClose={[Function]}
    open={true}
    showCloseButton={false}
  >
    <UpdateContactForm
      onCancel={[Function]}
    />
  </Modal>
</div>
`;

exports[`Component: Billing Summary should render with the payment info modal open 1`] = `
<div>
  <PendingPlanBanner
    account={
      Object {
        "billing": Object {},
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
  />
  <FreePlanWarningBanner
    account={
      Object {
        "billing": Object {},
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
    accountAgeInDays={5}
  />
  <Panel
    accent={true}
    title="Plan Overview"
  >
    <Panel.Section
      actions={
        Array [
          Object {
            "Component": [Function],
            "color": "orange",
            "content": "Upgrade Now",
            "to": "/account/billing/plan",
          },
        ]
      }
    >
      <LabelledValue
        label="Your Plan"
      >
        <PlanSummary
          plan={
            Object {
              "plan_volume": 15000,
            }
          }
        />
      </LabelledValue>
    </Panel.Section>
    <DedicatedIpSummarySection
      count={0}
      onClick={[Function]}
      plan={
        Object {
          "isFree": true,
        }
      }
    />
  </Panel>
  <Panel
    title="Billing"
  >
    <Panel.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Payment Information",
            "onClick": [Function],
          },
        ]
      }
    >
      <CardSummary
        billing={Object {}}
        label="Credit Card"
      />
    </Panel.Section>
    <Panel.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Billing Contact",
            "onClick": [Function],
          },
        ]
      }
    >
      <LabelledValue
        label="Billing Contact"
      >
        <h6>
           
        </h6>
        <p />
      </LabelledValue>
    </Panel.Section>
  </Panel>
  <PremiumBanner />
  <EnterpriseBanner />
  <Modal
    onClose={[Function]}
    open={true}
    showCloseButton={false}
  >
    <UpdatePaymentForm
      onCancel={[Function]}
    />
  </Modal>
</div>
`;

exports[`Component: Billing Summary should show the invoice history if there are invoices 1`] = `
<div>
  <PendingPlanBanner
    account={
      Object {
        "billing": Object {},
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
  />
  <FreePlanWarningBanner
    account={
      Object {
        "billing": Object {},
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
    accountAgeInDays={5}
  />
  <Panel
    accent={true}
    title="Plan Overview"
  >
    <Panel.Section
      actions={
        Array [
          Object {
            "Component": [Function],
            "color": "orange",
            "content": "Upgrade Now",
            "to": "/account/billing/plan",
          },
        ]
      }
    >
      <LabelledValue
        label="Your Plan"
      >
        <PlanSummary
          plan={
            Object {
              "plan_volume": 15000,
            }
          }
        />
      </LabelledValue>
    </Panel.Section>
    <DedicatedIpSummarySection
      count={0}
      onClick={[Function]}
      plan={
        Object {
          "isFree": true,
        }
      }
    />
  </Panel>
  <Panel
    title="Billing"
  >
    <Panel.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Payment Information",
            "onClick": [Function],
          },
        ]
      }
    >
      <CardSummary
        billing={Object {}}
        label="Credit Card"
      />
    </Panel.Section>
    <Panel.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Billing Contact",
            "onClick": [Function],
          },
        ]
      }
    >
      <LabelledValue
        label="Billing Contact"
      >
        <h6>
           
        </h6>
        <p />
      </LabelledValue>
    </Panel.Section>
  </Panel>
  <Connect(InvoiceHistory)
    invoices={
      Array [
        "an invoice",
        "another invoice",
      ]
    }
  />
  <PremiumBanner />
  <EnterpriseBanner />
  <Modal
    onClose={[Function]}
    open={false}
    showCloseButton={false}
  />
</div>
`;
